[package]
name = "twix"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.2", features = ["derive", "unstable-doc"] }
indicatif = "0.17.11"
playwright = "0.0.20"
rayon = "1.10.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = "1.43.0"
uriparse = "0.6.4"
